# pico-things

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
graphics/: LICENSE
lib/pico-common/: Cargo.toml
lib/pico-common/src/: lib.rs
pico-common/src/: link.rs
pico-dvi/: Cargo.toml
pico-dvi/src/: dvi.rs  link.rs  main.rs  test.pio
pico-dvi/src/dvi/: serializer.rs  timing.rs
projects/pico-dvi/: Cargo.toml
projects/pico-dvi/src/: main.rs
projects/pico-rtic-timer-2040-repr/: Cargo.toml
projects/pico-rtic-timer-2040-repr/src/: main.rs
projects/pico-tunes/: Cargo.toml
projects/pico-tunes/src/: main.rs  mid.rs  music.rs
projects/pico-tunes/src/mid/: songs.rs
projects/pico-tunes/src/music/: note.rs
