[workspace]
members  = ["pico-*"]
resolver = "2"

[workspace.package]
authors    = ["Zachary Kohnen <me@dusterthefirst.com>"]
edition    = "2021"
license    = "MPL-2.0"
publish    = false
repository = "https://github.com/DusterTheFirst/pico-things"
version    = "0.0.0"

[workspace.dependencies]
cortex-m     = "0.7.7"
cortex-m-rt  = "0.7.3"
embedded-hal = "0.2.7"

defmt       = "0.3.0"
defmt-rtt   = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

pio      = "0.2.1"
pio-proc = "0.2.1"
rp-pico  = { version = "0.7.0", features = ["rom-v2-intrinsics", "rp2040-e5"] }

fugit = { version = "0.3.6", features = ["defmt"] }

no-panics-whatsoever = "0.1.0"

# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units    = 8
debug            = false
debug-assertions = false
inherits         = "release"
opt-level        = 0
overflow-checks  = false

[profile.release.build-override]
codegen-units    = 8
debug            = false
debug-assertions = false
opt-level        = 0
overflow-checks  = false
