[package]
name = "pico-dvi"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cortex-m     = { workspace = true }
cortex-m-rt  = { workspace = true }
embedded-hal = { workspace = true }

defmt     = { workspace = true }
defmt-rtt = { workspace = true }

fugit    = { workspace = true }
pio      = { workspace = true }
pio-proc = { workspace = true }
rp-pico  = { workspace = true }

panic-probe = { workspace = true }

embedded-graphics = { version = "0.7.1", features = ["fixed_point"] }
modular-bitfield = "0.11.2"
