[package]
name = "pico-rtic-timer-2040-repr"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[features]
default = [
    "rp2040",
    # "systick"
]

rp2040 = []
systick = []

[dependencies]
cortex-m     = { workspace = true }
cortex-m-rt  = { workspace = true }
embedded-hal = { workspace = true }

defmt       = { workspace = true }
defmt-rtt   = { workspace = true }
panic-probe = { workspace = true }

fugit   = { workspace = true }
rp-pico = { workspace = true }

rtic            = { git = "https://github.com/rtic-rs/rtic", version = "2.0.0-alpha.0", features = ["thumbv6-backend"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", version = "1.0.0-alpha.0", features = ["cortex-m-systick", "rp2040"] }
