[package]
name = "pico-tunes"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cortex-m     = { workspace = true }
cortex-m-rt  = { workspace = true }
embedded-hal = { workspace = true }

defmt       = { workspace = true }
defmt-rtt   = { workspace = true }
panic-probe = { workspace = true }

fugit   = { workspace = true }
rp-pico = { workspace = true }

rtic = { git = "https://github.com/rtic-rs/rtic", version = "2.0.0-alpha.0", features = ["thumbv6-backend"] }
# rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", version = "1.0.0-alpha.0", features = ["rp2040"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", version = "1.0.0-alpha.0", features = ["cortex-m-systick"] }
futures = { version = "0.3.27", default-features = false }

micromath    = "2.0.0"
num-rational = { version = "0.4.1", default-features = false }
midi-msg = { version = "0.4.0", default-features = false }
